// Copyright Â© 2018 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "lorawan-stack/api/client.proto";
import "lorawan-stack/api/contact_info.proto";
import "lorawan-stack/api/enums.proto";
import "lorawan-stack/api/identifiers.proto";
import "lorawan-stack/api/rights.proto";

package ttn.lorawan.v3;

option go_package = "go.thethings.network/lorawan-stack/pkg/ttnpb";

// User is the message that defines an user on the network.
message User {
  UserIdentifiers ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  string name = 4;
  string description = 5;
  map<string,string> attributes = 6;
  repeated ContactInfo contact_info = 7;

  // Primary email address that can be used for logging in.
  // This address is not public, use contact_info for that.
  string primary_email_address = 8;
  google.protobuf.Timestamp primary_email_address_validated_at = 9 [(gogoproto.stdtime) = true];

  // Only used on create; never returned on API calls.
  string password = 10;
  google.protobuf.Timestamp password_updated_at = 11 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  bool require_password_update = 12;

  // The reviewing state of the user.
  // This field can only be modified by admins.
  State state = 13;
  // This user is an admin.
  // This field can only be modified by other admins.
  bool admin = 14;

  // The temporary password can only be used to update a user's password; never returned on API calls.
  string temporary_password = 15;
  google.protobuf.Timestamp temporary_password_created_at = 16 [(gogoproto.nullable) = true, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp temporary_password_expires_at = 17 [(gogoproto.nullable) = true, (gogoproto.stdtime) = true];

  Picture profile_picture = 18;
}

message Picture {
  message Embedded {
    // MIME type of the picture.
    string mime_type = 1;
    // Picture data. A data URI can be constructed as follows:
    // `data:<mime_type>;base64,<data>`.
    bytes data = 2;
  }

  // Embedded picture, always maximum 128px in size.
  // Omitted if there are external URLs available (in sizes).
  Embedded embedded = 1;

  // URLs of the picture for different sizes, if available on a CDN.
  map<uint32,string> sizes = 2;
}

message Users {
  repeated User users = 1;
}

message GetUserRequest {
  UserIdentifiers user_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  google.protobuf.FieldMask field_mask = 2 [(gogoproto.nullable) = false];
}

message CreateUserRequest {
  User user = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  string invitation_token = 2;
}

message UpdateUserRequest {
  User user = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  google.protobuf.FieldMask field_mask = 2 [(gogoproto.nullable) = false];
}

message CreateTemporaryPasswordRequest {
  UserIdentifiers user_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}

message UpdateUserPasswordRequest {
  UserIdentifiers user_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  string new = 2;
  string old = 3;
}

message CreateUserAPIKeyRequest {
  UserIdentifiers user_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  string name = 2;
  repeated Right rights = 3;
}

message UpdateUserAPIKeyRequest {
  UserIdentifiers user_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  APIKey api_key = 2 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}

message Invitation {
  string email = 1;
  string token = 2;

  google.protobuf.Timestamp expires_at = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp created_at = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated_at = 5 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  google.protobuf.Timestamp accepted_at = 6 [(gogoproto.stdtime) = true];
  UserIdentifiers accepted_by = 7;
}

message Invitations {
  repeated Invitation invitations = 1;
}

message SendInvitationRequest {
  string email = 1;
}

message DeleteInvitationRequest {
  string email = 1;
}

message UserSessionIdentifiers {
  UserIdentifiers user_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  string session_id = 2 [(gogoproto.customname) = "SessionID"];
}

message UserSession {
  UserSessionIdentifiers ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp created_at = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated_at = 4 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp expires_at = 5 [(gogoproto.stdtime) = true];
}

message UserSessions {
  repeated UserSession sessions = 1;
}

message ListUserSessionsRequest {
  UserIdentifiers user_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  // Order the results by this field path (must be present in the field mask).
  // Default ordering is by ID. Prepend with a minus (-) to reverse the order.
  string order = 2;
  // Limit the number of results per page.
  uint32 limit = 3;
  // Page number for pagination. 0 is interpreted as 1.
  uint32 page = 4;
}
